Add support for string array types
